--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -21,23 +21,12 @@
 
   // Python
   "python.venvPath": "${workspaceFolder}/.venv",
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
   "python.terminal.activateEnvInCurrentTerminal": true,
   "python.analysis.autoImportCompletions": true,
-  "python.linting.pydocstylePath": "$(asdf which pydocstyle)",
-  "python.linting.mypyPath": "$(asdf which mypy)",
-  "python.linting.banditPath": "$(asdf which bandit)",
-  "python.linting.flake8Path": "$(asdf which pyflakes)",
-  "python.linting.pydocstyleEnabled": true,
-  "python.linting.mypyEnabled": true,
-  "python.linting.banditEnabled": true,
-  "python.linting.flake8Enabled": true,
-  // "$(asdf which black)" not working
-  "python.formatting.blackPath": "/Users/martinig/.asdf/installs/python/3.8.8/bin/black",
-  "python.formatting.provider": "black",
-  "python.formatting.blackArgs": ["--line-length", "79"],
+  "black-formatter.args": ["--line-length", "79"],
   "[python]": {
-    "editor.defaultFormatter": "ms-python.python"
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnType": true
   },
 
   // Shell
@@ -66,5 +55,14 @@
     "**/*.php",
     "**/*.css",
     "**/*.scss"
-  ]
+  ],
+  "[sql]": {
+    "editor.defaultFormatter": "mtxr.sqltools"
+  },
+  "editor.inlineSuggest.showToolbar": "always",
+  "aws.suppressPrompts": {
+    "codeWhispererNewWelcomeMessage": true
+  },
+  "window.zoomLevel": 3,
+  "python.defaultInterpreterPath": "/Users/martinig/Desktop/fast-demos/.venv"
 }
